Add api with returning JSON places and search three closest restaraunts by geo data in elasticsearch

--- a/day03/web/templates/templates.html
+++ b/day03/web/templates/templates.html
@@ -18,7 +18,7 @@
     {{ end }}
   </ul>
 {{ if (gt .PageNum 1) }}
-<a href={{ printf "/places?page=%d" .PrevPage }}>Previous</a> # изменить на PageNum-1
+<a href={{ printf "/places?page=%d" .PrevPage }}>Previous</a>
 {{ end }}
 {{ if (lt .PageNum 1365) }}
 <a href={{ printf "/places?page=%d" .NextPage }}>Next</a>
