--- a/day06/internal/templates/auth.html
+++ b/day06/internal/templates/auth.html
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
         <div class="registration-cssave">
-            <form method="GET">
+            <form method="POST">
                 <h3 class="text-center">Admin personal account</h3>
                 <div class="form-group">
-                    <input class="form-control item" type="text" name="login" maxlength="15" minlength="4" pattern="^[a-zA-Z0-9_.-]*$" id="username" placeholder="Login" required>
+                    <input class="form-control item" type="text" name="username" maxlength="15" minlength="4" pattern="^[a-zA-Z0-9_.-]*$" id="username" placeholder="Username" required>
                 </div>
                 <div class="form-group">
                     <input class="form-control item" type="password" name="password" minlength="6" id="password" placeholder="Password" required>
