--- a/day06/internal/templates/articles.html
+++ b/day06/internal/templates/articles.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="eu">
-<img class="fit-picture" src="./../web/image/amazing_logo.png" alt="Logo">
+<img class="fit-picture" src="./web/image/amazing_logo.png" alt="Logo">
 <head>
     <meta charset="UTF-8">
     <title>My Blog</title>
@@ -11,16 +11,17 @@
     {{if .Empty}}No articles yet{{end}}
     {{range .Articles}}
     <li>
+        <div>{{.Id}}</div>
         <div>{{.Title}}</div>
         <div>{{.Content}}</div>
     </li>
-    <li><a href="/article/{{.ID}}">{{.Title}}</a></li>
+    <!-- <li><a href="/article/{{.ID}}">{{.Title}}</a></li> -->
     {{end}}
 </ul>
 
-{{if .HasPrevPage}}
-<a href="/?page={{.PrevPage}}">Previous Page</a>
-{{end}}
+{{ if (gt .PageNum 1) }}
+<a href="/?page={{.PrevPage}}">Prev Page</a>
+{{ end }}
 
 {{if .HasNextPage}}
 <a href="/?page={{.NextPage}}">Next Page</a>
