--- a/day06/internal/templates/admin.html
+++ b/day06/internal/templates/admin.html
@@ -7,10 +7,12 @@
 <body>
 <h1>Admin Panel</h1>
 <form action="/admin" method="POST">
+    <h5>Title</h5>
     <label>
         <textarea name="title" rows="2" cols="50"></textarea>
     </label>
     <br>
+    <h5>Content</h5>
     <label>
         <textarea name="content" rows="10" cols="50"></textarea>
     </label>
