--- a/day06/internal/templates/articles.html
+++ b/day06/internal/templates/articles.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="eu">
-<img class="fit-picture" src="./web/image/amazing_logo.png" alt="Logo">
+<img class="fit-picture" src="../../web/image/amazing_logo.png" alt="Logo">
 <head>
     <meta charset="UTF-8">
     <title>My Blog</title>
@@ -15,7 +15,7 @@
         <div>{{.Title}}</div>
         <div>{{.Content}}</div>
     </li>
-    <!-- <li><a href="/article/{{.ID}}">{{.Title}}</a></li> -->
+    <li><a href="/article/{{.ID}}">{{.Title}}</a></li>
     {{end}}
 </ul>
 
